--- a/Windows-Lite-x32-сборки.html
+++ b/Windows-Lite-x32-сборки.html
@@ -143,26 +143,38 @@
       <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-xl u-text-white u-text-1">Сборки Windows Lite (32 битные)<br>
         </h1>
-        <h6 class="u-text u-text-white u-text-2">Windows 7 HomePrem Lite x86 by Adderly (26.10.2022)</h6>
-        <img class="u-align-center u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows7-2022-10-26-23-20-43.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-2" src="images/Windows7-2022-10-26-23-21-34.png" alt="" data-image-width="1366" data-image-height="768">
+        <h6 class="u-text u-text-white u-text-2">Windows 10 LTSB Lite x86 by Adderly (05.11.2022)</h6>
+        <img class="u-align-center u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows102-2022-11-05-17-44-58.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-2" src="images/Windows102-2022-11-05-17-45-18.png" alt="" data-image-width="1366" data-image-height="768">
         <p class="u-text u-text-default u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся папки с браузерами, и т.д. (спец содержимое)<br>
+          <br> Удалены Skype, Wordpad, PDF Reader <br>Удалены почти все шрифты <br>Удален NTVDM <br>Удалена поддержка Dolby Atmos <br>Удалены все языки кроме украинского <br>Удалены Screensaverы <br>Удален игровой проводник <br>Удалена голосовая поддержка <br>Удалена Tablet PC <br>Удален Ease Transfer<br>
+          <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно отключить)<br>
+          <br>Образ весит 2.8 GB, после установки Windows 5.8 GB. <br>
+          <br>Поддерживает максимум 3 ГБ ОЗУ, как и остальные 32 рязрадные Windows.
+        </p>
+        <a href="404.html" data-page-id="1800220873" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 LTSB Lite by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/i90jkeuoal6r2j4/Windows+10+LTSB+Lite+x32+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows ​​10 LTSB  Lite by Adderly [MediaFire]</a>
+        <a href="https://mega.nz/file/knhGiLJI#oExh4r0mF8llRe7wI13NqVaNCi02IwosbB1JPXaR9aM" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-3" target="_blank"> Скачать Windows ​10 LTSB Lite by Adderly [MEGA.NZ]</a>
+        <h6 class="u-text u-text-white u-text-4">Windows 7 HomePrem Lite x86 by Adderly (26.10.2022)</h6>
+        <img class="u-align-center u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-3" src="images/Windows7-2022-10-26-23-20-43.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-4" src="images/Windows7-2022-10-26-23-21-34.png" alt="" data-image-width="1366" data-image-height="768">
+        <p class="u-text u-text-default u-text-white u-text-5"> Добавлена папка "от Марка Аддерли", в которой находятся папки с браузерами, и т.д. (спец содержимое)<br>
           <br> Удален WordPad <br>Удален DVD Maker <br>Удален Easy Transfer <br>Удалены все языки, кроме английского, русского, украинского <br>Удалена Голосовая поддержка <br>Удален Кеш и временные файлы <br>Удален Windows Defender <br>Удалены гаджеты<br>
           <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно отключить)<br>
           <br>Образ весит 2 GB, после установки Windows 6 GB. <br>
           <br>Поддерживает максимум 3 ГБ ОЗУ, как и остальные 32 рязрадные Windows.
         </p>
-        <a href="https://drive.google.com/file/d/1xdNaii5FCdUA0RB2563DjUjZEiNPbCdK/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-1" target="_blank">Скачать Windows 7 HomePrem Lite by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/h15ryzgviqu1q1r/Windows+7+Lite+x32+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows ​7 HomePrem Lite by Adderly [MediaFire]</a>
-        <a href="https://mega.nz/file/PRgj3LQa#zYlTyUENtH0HDr5Gera4rNK5-fqWPxhBoes3rPQUT2o" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-3" target="_blank"> Скачать Windows ​7 HomePrem Lite by Adderly [MEGA.NZ]</a>
-        <h6 class="u-text u-text-white u-text-4">Windows 8.1 Pro Lite x86 by Adderly (26.06.2022)</h6>
-        <img class="u-align-center u-expanded-width-md u-expanded-width-sm u-image u-image-default u-preserve-proportions u-image-3" src="images/Windows8.x-2022-06-26-23-17-13.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-image-4" src="images/Windows8.x-2022-06-26-23-18-14.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows8.x-2022-06-26-23-19-05.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-md u-image u-image-default u-preserve-proportions u-image-6" src="images/Windows8.x-2022-06-26-23-21-41.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-image u-image-default u-preserve-proportions u-image-7" src="images/Windows8.x-2022-06-26-23-18-29.png" alt="" data-image-width="465" data-image-height="256">
-        <img class="u-image u-image-default u-image-8" src="images/Windows8.x-2022-06-26-23-17-241.png" alt="" data-image-width="445" data-image-height="240">
-        <p class="u-text u-text-default u-text-white u-text-5"> Добавлена папка "от Марка Аддерли", в которой находится инсталятор Google Chrome, и некоторые другие папки.<br>
+        <a href="https://drive.google.com/file/d/1xdNaii5FCdUA0RB2563DjUjZEiNPbCdK/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-4" target="_blank">Скачать Windows 7 HomePrem Lite by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/h15ryzgviqu1q1r/Windows+7+Lite+x32+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-5" target="_blank"> Скачать Windows ​7 HomePrem Lite by Adderly [MediaFire]</a>
+        <a href="https://mega.nz/file/PRgj3LQa#zYlTyUENtH0HDr5Gera4rNK5-fqWPxhBoes3rPQUT2o" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-6" target="_blank"> Скачать Windows ​7 HomePrem Lite by Adderly [MEGA.NZ]</a>
+        <h6 class="u-text u-text-white u-text-6">Windows 8.1 Pro Lite x86 by Adderly (26.06.2022)</h6>
+        <img class="u-align-center u-expanded-width-md u-expanded-width-sm u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows8.x-2022-06-26-23-17-13.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-image-6" src="images/Windows8.x-2022-06-26-23-18-14.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-preserve-proportions u-image-7" src="images/Windows8.x-2022-06-26-23-19-05.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-image u-image-default u-preserve-proportions u-image-8" src="images/Windows8.x-2022-06-26-23-21-41.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-image u-image-default u-image-9" src="images/Windows8.x-2022-06-26-23-17-241.png" alt="" data-image-width="445" data-image-height="240">
+        <img class="u-image u-image-default u-preserve-proportions u-image-10" src="images/Windows8.x-2022-06-26-23-18-29.png" alt="" data-image-width="465" data-image-height="256">
+        <p class="u-text u-text-default u-text-white u-text-7"> Добавлена папка "от Марка Аддерли", в которой находится инсталятор Google Chrome, и некоторые другие папки.<br>
           <br>Удалены приложения<br>"Финансы, Еда и напитки, Здоровье и фитнесс, Карты, Новости,<br>Спорт, Путешествия, Погода, Помощь и подсказки, Ридер, Скайп, Будильник,<br>Запись звука, Xbox Live Games, Zune, Сканер, Почта, Люди, XBOX Live Games, UWP Калькулятор"&nbsp;<br>
           <br>Интегрированы Microsoft Visual C++ Redistributable 2005, 2008, 2010, 2012, 2013 x86<br>
           <br>Включен DirectPLay<br>&nbsp;<br>Отключен Internet Explorer<br>Отключен Media Player<br>(по желанию можно вернуть)<br>
@@ -171,11 +183,11 @@
           <br>Образ весит 2.97 GB, после установки Windows занимает 8.88 GB. <br>
           <br>Поддерживает максимум 3 ГБ ОЗУ, как и остальные 32 рязрадные Windows.
         </p>
-        <a href="https://drive.google.com/file/d/1owQwO251ocPBcWqpA05mkpB4g39rp7Nk/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-4" target="_blank">Скачать Windows 8.1 Pro Lite by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/0ynqo6eppqv0sxw/Windows+8.1+Lite+x32+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-5" target="_blank"> Скачать Windows 8.1 Pro Lite by Adderly [MediaFire]</a>
-        <a href="https://mega.nz/file/ImZzWDhA#YoeooKNXBB5khh7DGuGCdf6Ky8VL487R0XmKw1EkgE8" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-6" target="_blank"> Скачать Windows 8.1 Pro Lite by Adderly [MEGA.NZ]</a>
-        <p class="u-text u-text-default u-text-white u-text-6">Смотрите так же:</p>
-        <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-7">Сборки Windows Lite</a>
+        <a href="https://drive.google.com/file/d/1owQwO251ocPBcWqpA05mkpB4g39rp7Nk/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-7" target="_blank">Скачать Windows 8.1 Pro Lite by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/0ynqo6eppqv0sxw/Windows+8.1+Lite+x32+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-8" target="_blank"> Скачать Windows 8.1 Pro Lite by Adderly [MediaFire]</a>
+        <a href="https://mega.nz/file/ImZzWDhA#YoeooKNXBB5khh7DGuGCdf6Ky8VL487R0XmKw1EkgE8" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-9" target="_blank"> Скачать Windows 8.1 Pro Lite by Adderly [MEGA.NZ]</a>
+        <p class="u-text u-text-default u-text-white u-text-8">Смотрите так же:</p>
+        <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-10">Сборки Windows Lite</a>
       </div>
     </section>
     
