--- a/Windows-Lite-x32-сборки.html
+++ b/Windows-Lite-x32-сборки.html
@@ -140,13 +140,13 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-image u-section-1" id="sec-2ecd" data-image-width="1920" data-image-height="1200">
-      <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
-        <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-xl u-text-white u-text-1">Сборки Windows Lite (32 битные)<br>
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <h1 class="u-text u-text-default-lg u-text-default-xl u-text-white u-text-1">Сборки Windows Lite (32 битные)<br>
         </h1>
         <h6 class="u-text u-text-white u-text-2">Windows 10 LTSB Lite x86 by Adderly (05.11.2022)</h6>
         <img class="u-align-center u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows102-2022-11-05-17-44-58.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-2" src="images/Windows102-2022-11-05-17-45-18.png" alt="" data-image-width="1366" data-image-height="768">
-        <p class="u-text u-text-default u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся папки с браузерами, и т.д. (спец содержимое)<br>
+        <p class="u-text u-text-default-xl u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся папки с браузерами, и т.д. (спец содержимое)<br>
           <br> Удалены Skype, Wordpad, PDF Reader <br>Удалены почти все шрифты <br>Удален NTVDM <br>Удалена поддержка Dolby Atmos <br>Удалены все языки кроме украинского <br>Удалены Screensaverы <br>Удален игровой проводник <br>Удалена голосовая поддержка <br>Удалена Tablet PC <br>Удален Ease Transfer<br>
           <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно отключить)<br>
           <br>Образ весит 2.8 GB, после установки Windows 5.8 GB. <br>
