--- a/Сборки-от-Аддерли.html
+++ b/Сборки-от-Аддерли.html
@@ -362,7 +362,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
         <h2 class="u-text u-text-white u-text-4"> Другие страницы, которые могут быть полезны!</h2>
         <a href="Информация-о-сборках.html" data-page-id="254799920" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-50 u-btn-5" target="_blank">Информация о Сборках от Аддерли</a>
         <a href="Софт-от-Аддерли.html" data-page-id="21398082" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-radius-50 u-btn-6" target="_blank">Софт от Аддерли</a>
-        <a href="Библиотека-Образов.html" data-page-id="74119563" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-7" target="_blank">Библиотенка образов Windows</a>
+        <a href="Библиотека-Образов.html" data-page-id="74119563" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-7" target="_blank">Библиотека образов Windows</a>
         <a href="Обновления-для-Windows.html" data-page-id="72177041" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-13 u-radius-50 u-btn-8" target="_blank">Обновления Windows</a>
         <a href="Ключи-от-Аддерли.html" data-page-id="271508222" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-9" target="_blank">Ключи от Аддерли</a>
         <a href="Старые-версии-Windows.html" data-page-id="576721080" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-26 u-radius-50 u-btn-10" target="_blank">Старые Windows</a>
