--- a/Windows-8-0-сборки.html
+++ b/Windows-8-0-сборки.html
@@ -156,7 +156,7 @@
           <br>Интегрирован Framework 4.6, 3.5, 3.0, 2.0<br>
           <br>Интегрированы Microsoft Visual C++ Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022. x86 и, x64&nbsp;<br>
           <br>Удалены Bing приложения (интеграции)<br>
-          <br>Добавлены темы "Архитектура, Персонажи, Лашдафт" из Windows 7 <br>
+          <br>Добавлены темы "Архитектура, Персонажи, Ландшафт" из Windows 7 <br>
           <br>Добавлены темы с обоями рабочего стола из Windows Vista, 7, 8.1, 10, 11<br>
           <br>Добавлены темы с обоями из экрана блокировки Windows 8 и Windows 10 <br>
           <br>Добавлен диспетчер задач в ПКМ по рабочему столу ​(по желанию можно выключить)<br>
