--- a/Windows-Lite-x32-сборки.html
+++ b/Windows-Lite-x32-сборки.html
@@ -153,21 +153,21 @@
           <br>Образ весит 2.8 GB, после установки Windows 5.8 GB. <br>
           <br>Поддерживает максимум 3 ГБ ОЗУ, как и остальные 32 ​разрядные Windows.
         </p>
-        <a href="404.html" data-page-id="1800220873" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 LTSB Lite by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/12YDXjD_QJHP0Lc2humKoIug2T4LG_QD8/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 LTSB Lite by Adderly [Google Drive]</a>
         <a href="https://www.mediafire.com/file/i90jkeuoal6r2j4/Windows+10+LTSB+Lite+x32+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows ​​10 LTSB  Lite by Adderly [MediaFire]</a>
         <a href="https://mega.nz/file/knhGiLJI#oExh4r0mF8llRe7wI13NqVaNCi02IwosbB1JPXaR9aM" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-3" target="_blank"> Скачать Windows ​10 LTSB Lite by Adderly [MEGA.NZ]</a>
-        <h6 class="u-text u-text-white u-text-4">Windows 7 HomePrem Lite x86 by Adderly (26.10.2022)</h6>
+        <h6 class="u-text u-text-white u-text-4">Windows 7 HomePrem Lite x86 V2 by Adderly (20.11.2022)</h6>
         <img class="u-align-center u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-3" src="images/Windows7-2022-10-26-23-20-43.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-4" src="images/Windows7-2022-10-26-23-21-34.png" alt="" data-image-width="1366" data-image-height="768">
         <p class="u-text u-text-default u-text-white u-text-5"> Добавлена папка "от Марка Аддерли", в которой находятся папки с браузерами, и т.д. (спец содержимое)<br>
           <br> Удален WordPad <br>Удален DVD Maker <br>Удален Easy Transfer <br>Удалены все языки, кроме английского, русского, украинского <br>Удалена Голосовая поддержка <br>Удален Кеш и временные файлы <br>Удален Windows Defender <br>Удалены гаджеты<br>
           <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно отключить)<br>
-          <br>Образ весит 2 GB, после установки Windows 6 GB. <br>
+          <br>Образ весит 1.88 GB, после установки Windows 6 GB. <br>
           <br>Поддерживает максимум 3 ГБ ОЗУ, как и остальные 32 ​разрядные Windows.
         </p>
-        <a href="https://drive.google.com/file/d/1xdNaii5FCdUA0RB2563DjUjZEiNPbCdK/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-4" target="_blank">Скачать Windows 7 HomePrem Lite by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/h15ryzgviqu1q1r/Windows+7+Lite+x32+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-5" target="_blank"> Скачать Windows ​7 HomePrem Lite by Adderly [MediaFire]</a>
-        <a href="https://mega.nz/file/PRgj3LQa#zYlTyUENtH0HDr5Gera4rNK5-fqWPxhBoes3rPQUT2o" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-6" target="_blank"> Скачать Windows ​7 HomePrem Lite by Adderly [MEGA.NZ]</a>
+        <a href="https://drive.google.com/file/d/1MsLuZJPYW_gycuoCRHPvx4N0CMddWecw/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-4" target="_blank">Скачать Windows 7 HomePrem Lite V2 by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/2heofs2b69jnxdq/Windows+7+Lite+x32+V2+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-5" target="_blank"> Скачать Windows ​7 HomePrem Lite V2 by Adderly [MediaFire]</a>
+        <a href="https://mega.nz/file/9rYkFCLa#JRyMhdhBNyEofIQ1-M_uY-uXSC0HUrqmbxtdoFuLAns" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-6" target="_blank"> Скачать Windows ​7 HomePrem Lite V2 by Adderly [MEGA.NZ]</a>
         <h6 class="u-text u-text-white u-text-6">Windows 8.1 Pro Lite x86 by Adderly (26.06.2022)</h6>
         <img class="u-align-center u-expanded-width-md u-expanded-width-sm u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows8.x-2022-06-26-23-17-13.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-image-6" src="images/Windows8.x-2022-06-26-23-18-14.png" alt="" data-image-width="1366" data-image-height="768">
