--- a/Windows-Lite-x32-сборки.html
+++ b/Windows-Lite-x32-сборки.html
@@ -72,7 +72,7 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-custom-color-9 u-border-palette-1-base u-button-style u-custom-color-6 u-hover-custom-color-8 u-nav-link u-text-active-white u-text-hover-white" href="Новости.html" style="padding: 10px 20px;">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Новости.html">Новости</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-9 u-border-palette-1-base u-button-style u-custom-color-6 u-hover-custom-color-8 u-nav-link u-text-active-white u-text-hover-white" href="https://t.me/adderlywindows" style="padding: 10px 20px;">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="https://t.me/adderlywindows">Новости</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="https://donatello.to/adderly">Поддержать автора</a>
 </li></ul>
 </div>
@@ -113,7 +113,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://t.me/adderlywindows">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://t.me/adderlywindows">Новости</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://donatello.to/adderly">Поддержать автора</a>
 </li></ul>
 </div>
@@ -148,7 +148,7 @@
         <img class="u-align-center u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows102-2022-11-05-17-44-58.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-2" src="images/Windows102-2022-11-05-17-45-18.png" alt="" data-image-width="1366" data-image-height="768">
         <p class="u-text u-text-default-xl u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся папки с браузерами, и т.д. (спец содержимое)<br>
-          <br> Удалены Skype, Wordpad, PDF Reader <br>Удалены почти все шрифты <br>Удален NTVDM <br>Удалена поддержка Dolby Atmos <br>Удалены все языки кроме украинского <br>Удалены Screensaverы <br>Удален игровой проводник <br>Удалена голосовая поддержка <br>Удалена Tablet PC <br>Удален Ease Transfer<br>
+          <br> Удалены Skype, Wordpad, PDF Reader <br>Удалены почти все шрифты <br>Удален NTVDM <br>Удалена поддержка Dolby Atmos <br>Удалены все языки кроме Русского и Украинского <br>Удалены Screensaverы <br>Удален игровой проводник <br>Удалена голосовая поддержка <br>Удалена Tablet PC <br>Удален Ease Transfer<br>
           <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно отключить)<br>
           <br>Образ весит 2.8 GB, после установки Windows 5.8 GB. <br>
           <br>Поддерживает максимум 3 ГБ ОЗУ, как и остальные 32 ​разрядные Windows.
