--- a/Windows-Lite-сборки.html
+++ b/Windows-Lite-сборки.html
@@ -73,7 +73,7 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-custom-color-9 u-border-palette-1-base u-button-style u-custom-color-6 u-hover-custom-color-8 u-nav-link u-text-active-white u-text-hover-white" href="Новости.html" style="padding: 10px 20px;">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Новости.html">Новости</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-9 u-border-palette-1-base u-button-style u-custom-color-6 u-hover-custom-color-8 u-nav-link u-text-active-white u-text-hover-white" href="https://t.me/adderlywindows" style="padding: 10px 20px;">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="https://t.me/adderlywindows">Новости</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="https://donatello.to/adderly">Поддержать автора</a>
 </li></ul>
 </div>
@@ -114,7 +114,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://t.me/adderlywindows">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://t.me/adderlywindows">Новости</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://donatello.to/adderly">Поддержать автора</a>
 </li></ul>
 </div>
@@ -152,7 +152,7 @@
         <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-3" src="images/2022-08-15212113.png" alt="" data-image-width="545" data-image-height="293">
         <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-4" src="images/2022-08-15211852.png" alt="" data-image-width="815" data-image-height="373">
         <p class="u-text u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ,<br>а так же рег файлы, чтобы вернуть старый просмотрщик фото и&nbsp;чтобы отключать и включать обновления.&nbsp;<br>
-          <br>Удален Windows Recovery <br>Удалены все языки кроме Украинского, Японского, Китайского, Корейского <br>Удалена поддержка принтеров и факсов <br>Удалена голосовая поддержка <br>Удалены компоненты MDAC, MSMQ <br>Удален WinSxS Backup <br>Удалены компоненты Tablet PC <br>Удалены компоненты MobilePC <br>Удален Windows Tiff Filter <br>Удален Easy Transfer <br>Удален Temp <br>Удален DVD Play <br>
+          <br>Удален Windows Recovery <br>Удалены все языки кроме Русского, Украинского, Японского, Китайского, Корейского <br>Удалена поддержка принтеров и факсов <br>Удалена голосовая поддержка <br>Удалены компоненты MDAC, MSMQ <br>Удален WinSxS Backup <br>Удалены компоненты Tablet PC <br>Удалены компоненты MobilePC <br>Удален Windows Tiff Filter <br>Удален Easy Transfer <br>Удален Temp <br>Удален DVD Play <br>
           <br>Удалены приложения "Почта, Люди, One Note, Get Started, Камера"<br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
           <br>Интегрированы Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
@@ -174,7 +174,7 @@
         <p class="u-text u-text-body-alt-color u-text-5"> Сборка обновлена до Update 3 <br>
           <br>Добавлена папка KMS <br>
           <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных и авторских программ<br>
-          <br> Удален Windows Defender <br>Удален Windows Recovery <br>Удалены все языки кроме Украинского <br>Удалена поддержка принтеров и факсов <br>Удалена голосовая поддержка <br>Удалены компоненты MDAC <br>Удален WinSxS Backup <br>Удалены компоненты Tablet PC <br>Удалены компоненты MobilePC <br>Удален Windows Tiff Filter <br>Удален Easy Transfer <br>Удален Temp <br>Удален DVD Play <br>
+          <br> Удален Windows Defender <br>Удален Windows Recovery <br>Удалены все языки кроме Русского и Украинского <br>Удалена поддержка принтеров и факсов <br>Удалена голосовая поддержка <br>Удалены компоненты MDAC <br>Удален WinSxS Backup <br>Удалены компоненты Tablet PC <br>Удалены компоненты MobilePC <br>Удален Windows Tiff Filter <br>Удален Easy Transfer <br>Удален Temp <br>Удален DVD Play <br>
           <br>Интегрирован Framework 4.8, 4.7.2, 3.0, 2.0<br>
           <br>Интегрированы Microsoft Visual C++ Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022. x86 и, x64&nbsp;<br>
           <br>Включен DirectPLay<br>
@@ -201,7 +201,7 @@
         <p class="u-align-center-lg u-text u-text-white u-text-7"> Обновления на 2011 год. (Service Pack 1) <br>
           <br>Добавлен активатор.<br>
           <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных и авторских программ&nbsp;<br>
-          <br> Удалена поддержка принтеров и факсов <br>Удалены все языки кроме Украинского <br>Удалены образцы музыки, видео, фото <br>Удалена голосовая поддержка <br>Удалены компоненты Tablet PC <br>Удалены компоненты MobilePC <br>Удален Windows Tiff Filter <br>Удалены компоненты MDAC <br>Удален WinSxS Backup <br>Удален Windows Defender <br>Удален Windows Recovery <br>Удален Temp <br>Удален Easy Transfer <br>Удалены DVD, Maker, Play <br>Удалены Игры <br>
+          <br> Удалена поддержка принтеров и факсов <br>Удалены все языки кроме Русского и Украинского <br>Удалены образцы музыки, видео, фото <br>Удалена голосовая поддержка <br>Удалены компоненты Tablet PC <br>Удалены компоненты MobilePC <br>Удален Windows Tiff Filter <br>Удалены компоненты MDAC <br>Удален WinSxS Backup <br>Удален Windows Defender <br>Удален Windows Recovery <br>Удален Temp <br>Удален Easy Transfer <br>Удалены DVD, Maker, Play <br>Удалены Игры <br>
           <br>Интегрированы Framework 4.8, 4.7.2, 3.5<br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
           <br>Добавлены темы Windows 8.1, и 10 (по желанию можно удалить)&nbsp;<br>Добавлены темы с обоями Windows Vista, 11<br>
