--- a/Советы-по-использованию.html
+++ b/Советы-по-использованию.html
@@ -70,7 +70,7 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-custom-color-9 u-border-palette-1-base u-button-style u-custom-color-6 u-hover-custom-color-8 u-nav-link u-text-active-white u-text-hover-white" href="Новости.html" style="padding: 10px 20px;">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Новости.html">Новости</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-9 u-border-palette-1-base u-button-style u-custom-color-6 u-hover-custom-color-8 u-nav-link u-text-active-white u-text-hover-white" href="https://t.me/adderlywindows" style="padding: 10px 20px;">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="https://t.me/adderlywindows">Новости</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="https://donatello.to/adderly">Поддержать автора</a>
 </li></ul>
 </div>
@@ -111,7 +111,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://t.me/adderlywindows">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://t.me/adderlywindows">Новости</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://donatello.to/adderly">Поддержать автора</a>
 </li></ul>
 </div>
@@ -141,7 +141,10 @@
     <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-grey-90 u-section-1" id="sec-0601">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Советы по использованию</h1>
-        <h2 class="u-align-center-xl u-text u-text-2">Теперь пока что больше нету :D</h2>
+        <h2 class="u-align-center-xl u-text u-text-2">1. Если какой либо инсталлятор выдает ошибку<br>"Програма уже открыта", переименуйте инсталлятор.<br>
+          <br>2. Если у вас имеются проблемы с Windows, вины в сборке нет.<br>Они основаны на MSDN версиях Windows,<br>об этом написано в описаниях сборок.<br>
+          <br>3. Не задавайте лишних вопросов про изменения сборок, типа:<br>"А что добавлено в сборках?"<br>Изменения указаны в страницах с сборками.
+        </h2>
       </div>
     </section>
     
