--- a/Старые-версии-Windows.html
+++ b/Старые-версии-Windows.html
@@ -71,7 +71,7 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-custom-color-9 u-border-palette-1-base u-button-style u-custom-color-6 u-hover-custom-color-8 u-nav-link u-text-active-white u-text-hover-white" href="Новости.html" style="padding: 10px 20px;">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Новости.html">Новости</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-9 u-border-palette-1-base u-button-style u-custom-color-6 u-hover-custom-color-8 u-nav-link u-text-active-white u-text-hover-white" href="https://t.me/adderlywindows" style="padding: 10px 20px;">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="https://t.me/adderlywindows">Новости</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="https://donatello.to/adderly">Поддержать автора</a>
 </li></ul>
 </div>
@@ -112,7 +112,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://t.me/adderlywindows">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://t.me/adderlywindows">Новости</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://donatello.to/adderly">Поддержать автора</a>
 </li></ul>
 </div>
@@ -153,8 +153,8 @@
         <a href="https://www.mediafire.com/file/uobtfjrc6vvu7i5/4Windows_98_SE.iso/file" class="u-border-none u-btn u-button-style u-custom-color-4 u-hover-custom-color-5 u-btn-7">Windows 98 Second Edition</a>
         <a href="https://drive.google.com/file/d/1OMcQXUBR7IPZjNmQtohhfDCV7qH3WGYb/view?usp=sharing" class="u-border-none u-btn u-button-style u-custom-color-5 u-hover-custom-color-4 u-btn-8">Windows 2000 SP4</a>
         <a href="https://www.mediafire.com/file/c177o9mz1ermz3p/5Windows_2000_SP4.iso/file" class="u-border-none u-btn u-button-style u-custom-color-4 u-hover-custom-color-5 u-btn-9">Windows 2000 SP4</a>
-        <a href="https://drive.google.com/file/d/1atVVYvwdKNSR_clkTIWKGlKsiqdtqaa2/view?usp=sharing" class="u-border-none u-btn u-button-style u-custom-color-5 u-hover-custom-color-4 u-btn-10">Windows Millenium Eition</a>
-        <a href="https://www.mediafire.com/file/vrjmrbg05jw3ol9/6Windows_ME.iso/file" class="u-border-none u-btn u-button-style u-custom-color-4 u-hover-custom-color-5 u-btn-11">Windows Millenium Eition</a>
+        <a href="https://drive.google.com/file/d/1atVVYvwdKNSR_clkTIWKGlKsiqdtqaa2/view?usp=sharing" class="u-border-none u-btn u-button-style u-custom-color-5 u-hover-custom-color-4 u-btn-10">Windows Millenium Edition</a>
+        <a href="https://www.mediafire.com/file/vrjmrbg05jw3ol9/6Windows_ME.iso/file" class="u-border-none u-btn u-button-style u-custom-color-4 u-hover-custom-color-5 u-btn-11">Windows Millenium Edition</a>
         <a href="https://drive.google.com/file/d/1KExuUajTSoeLyXjRgqy3ag7SOCVRlDon/view?usp=sharing" class="u-border-none u-btn u-button-style u-custom-color-5 u-hover-custom-color-4 u-btn-12">Windows XP SP3</a>
         <a href="https://www.mediafire.com/file/3m36synjtotmz3n/7Windows_XP_SP3.iso/file" class="u-border-none u-btn u-button-style u-custom-color-4 u-hover-custom-color-5 u-btn-13">Windows XP SP3</a>
         <a href="https://drive.google.com/file/d/1FSAStnqJS-7ocAOk0SFSejt1VoyYo-5j/view?usp=sharing" class="u-border-none u-btn u-button-style u-custom-color-5 u-hover-custom-color-4 u-btn-14">Windows Vista</a>
@@ -174,7 +174,7 @@
         <a href="https://drive.google.com/file/d/1atVVYvwdKNSR_clkTIWKGlKsiqdtqaa2/view?usp=sharing" class="u-border-none u-btn u-button-style u-custom-color-5 u-hover-custom-color-4 u-btn-5">Windows Millenium Eition</a>
         <a href="https://drive.google.com/file/d/1KExuUajTSoeLyXjRgqy3ag7SOCVRlDon/view?usp=sharing" class="u-border-none u-btn u-button-style u-custom-color-5 u-hover-custom-color-4 u-btn-6">Windows XP SP3</a>
         <a href="https://drive.google.com/file/d/1FSAStnqJS-7ocAOk0SFSejt1VoyYo-5j/view?usp=sharing" class="u-border-none u-btn u-button-style u-custom-color-5 u-hover-custom-color-4 u-btn-7">Windows Vista</a>
-        <h2 class="u-text u-text-default u-text-2">MediaFire</h2>
+        <h2 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-2">MediaFire</h2>
         <a href="https://www.mediafire.com/file/kfbq1o20wkxm27o/1Windows+3.11.iso/file" class="u-border-none u-btn u-button-style u-custom-color-4 u-hover-custom-color-5 u-btn-8">Windows 3.11</a>
         <a href="https://www.mediafire.com/file/56jrc0h5feaobwv/2Windows_95.iso/file" class="u-border-none u-btn u-button-style u-custom-color-4 u-hover-custom-color-5 u-btn-9">Windows 95</a>
         <a href="https://www.mediafire.com/file/exkqyyzwd4vgh45/3Windows_NT_4.0.iso/file" class="u-border-none u-btn u-button-style u-custom-color-4 u-hover-custom-color-5 u-btn-10">Windows NT 4.0</a>
