--- a/Про-uTorrent-раздачи.html
+++ b/Про-uTorrent-раздачи.html
@@ -70,7 +70,7 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-custom-color-9 u-border-palette-1-base u-button-style u-custom-color-6 u-hover-custom-color-8 u-nav-link u-text-active-white u-text-hover-white" href="Новости.html" style="padding: 10px 20px;">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Новости.html">Новости</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-9 u-border-palette-1-base u-button-style u-custom-color-6 u-hover-custom-color-8 u-nav-link u-text-active-white u-text-hover-white" href="https://t.me/adderlywindows" style="padding: 10px 20px;">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="https://t.me/adderlywindows">Новости</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="https://donatello.to/adderly">Поддержать автора</a>
 </li></ul>
 </div>
@@ -111,7 +111,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://t.me/adderlywindows">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://t.me/adderlywindows">Новости</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://donatello.to/adderly">Поддержать автора</a>
 </li></ul>
 </div>
@@ -141,14 +141,7 @@
     <section class="u-clearfix u-grey-90 u-section-1" id="sec-006c">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Про uTorrent раздачи</h1>
-        <h3 class="u-align-center u-text u-text-2">Я решил начать раздачи некоторых сборок.<br>
-          <br>На данный момент раздается:<br>Windows 11 V3 by Adderly<br>
-          <br>Раздачи лимит - от 2 до 4 MB.<br>
-          <br>Возможно, что торренты по ночам работать не будут - я думаю ясно почему.<br>
-          <br>А после августа, в школьное время, скорее всего новых сборок, и раздач торрентов не будет / либо раздачи будут, но не от меня.<br>
-          <br>Раздачи будут держатся на добрых людях, которые оставляют программу для торрентов открытыми, при раздаче.<br>Я буду благодарен таким людям, которые думают про других.<br>
-          <br>Жизнь и работа торрентов зависит от вас!
-        </h3>
+        <h3 class="u-align-center u-text u-text-2">Нет раздач.</h3>
       </div>
     </section>
     
