--- a/Сборки-от-Аддерли.html
+++ b/Сборки-от-Аддерли.html
@@ -73,7 +73,7 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-custom-color-9 u-border-palette-1-base u-button-style u-custom-color-6 u-hover-custom-color-8 u-nav-link u-text-active-white u-text-hover-white" href="Новости.html" style="padding: 10px 20px;">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="Новости.html">Новости</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-9 u-border-palette-1-base u-button-style u-custom-color-6 u-hover-custom-color-8 u-nav-link u-text-active-white u-text-hover-white" href="https://t.me/adderlywindows" style="padding: 10px 20px;">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="https://t.me/adderlywindows">Новости</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-75 u-hover-palette-1-base u-nav-link" href="https://donatello.to/adderly">Поддержать автора</a>
 </li></ul>
 </div>
@@ -114,7 +114,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Библиотека-Образов.html">Библиотека Образов</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Новости.html">Новости</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://t.me/adderlywindows">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://t.me/adderlywindows">Новости</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://donatello.to/adderly">Поддержать автора</a>
 </li></ul>
 </div>
@@ -142,8 +142,8 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-image u-section-1" id="sec-a9a5" data-image-width="1920" data-image-height="1200">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-text u-text-white u-text-1">
+      <div class="u-clearfix u-sheet u-valign-middle-md u-sheet-1">
+        <h1 class="u-align-center-xs u-text u-text-white u-text-1">
           <span style="font-weight: 400;">Сборки от Марка Аддерли<br>В которых нет мусора, телеметрии, и яндексов.
           </span>
           <br>
@@ -154,7 +154,7 @@
         <a href="https://www.youtube.com/channel/UCHPOaRG5Z59pOmXud5W4N5g" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-25 u-radius-50 u-btn-3" target="_blank">Сборки от Аддерли YouTube</a>
         <a href="Как-устанавливать.html" data-page-id="56301212" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-28 u-radius-50 u-btn-4" target="_blank">Как устанавливать сборки от Аддерли</a>
         <h2 class="u-text u-text-white u-text-3">Выбери раздел с сборками Windows...</h2>
-        <div class="u-carousel u-gallery u-gallery-slider u-layout-carousel u-lightbox u-no-transition u-show-text-on-hover u-gallery-1" id="carousel-f035" data-interval="5000" data-u-ride="carousel">
+        <div class="u-carousel u-gallery u-gallery-slider u-hidden-sm u-hidden-xs u-layout-carousel u-lightbox u-no-transition u-show-text-on-hover u-gallery-1" id="carousel-f035" data-interval="5000" data-u-ride="carousel">
           <ol class="u-absolute-hcenter u-carousel-indicators u-carousel-indicators-1">
             <li data-u-target="#carousel-f035" data-u-slide-to="0" class="u-active u-active-custom-color-25 u-hover-custom-color-28 u-shape-circle u-white" style="width: 10px; height: 10px;"></li>
             <li data-u-target="#carousel-f035" data-u-slide-to="1" class="u-active-custom-color-25 u-shape-circle u-white" style="width: 10px; height: 10px;"></li>
@@ -369,6 +369,16 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
         <a href="СтарыйСофт-для-Windows-XPVista.html" data-page-id="41070472" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-23 u-radius-50 u-btn-11" target="_blank">Старый софт для Windows XP</a>
         <a href="Windows-Lite-x32-сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-6 u-radius-50 u-btn-12" target="_blank">Сборки Windows Lite x32</a>
         <a href="Проверка-на-целостность.html" data-page-id="281617986" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-22 u-radius-50 u-btn-13" target="_blank">Старые проверки на целостность</a>
+        <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-19 u-hidden-lg u-hidden-md u-hidden-xl u-radius-50 u-btn-14" target="_blank">Сборки Windows 11</a>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-6 u-hidden-lg u-hidden-md u-hidden-xl u-radius-50 u-btn-15" target="_blank">Сборки Windows 10</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-6 u-hidden-lg u-hidden-md u-hidden-xl u-radius-50 u-btn-16" target="_blank">Сборки Windows 8.1</a>
+        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-6 u-hidden-lg u-hidden-md u-hidden-xl u-radius-50 u-btn-17" target="_blank">Сборки Windows 8.0</a>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-6 u-hidden-lg u-hidden-md u-hidden-xl u-radius-50 u-btn-18" target="_blank">Сборки Windows 7</a>
+        <a href="Windows-XP-сборки.html" data-page-id="1493610735" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-6 u-hidden-lg u-hidden-md u-hidden-xl u-radius-50 u-btn-19" target="_blank">Сборки Windows XP</a>
+        <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-6 u-hidden-lg u-hidden-md u-hidden-xl u-radius-50 u-btn-20" target="_blank">Сборки Windows Lite</a>
+        <a href="Windows-Mini-сборки.html" data-page-id="751803690" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-6 u-hidden-lg u-hidden-md u-hidden-xl u-radius-50 u-btn-21" target="_blank">Сборки Windows Mini</a>
+        <a href="Оригинальные-Windows.html" data-page-id="175815215" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-6 u-hidden-lg u-hidden-md u-hidden-xl u-radius-50 u-btn-22" target="_blank">Оригинальные Сборки</a>
+        <a href="Windows-PE-от-Аддерли.html" data-page-id="1996302821" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-6 u-hidden-lg u-hidden-md u-hidden-xl u-radius-50 u-btn-23" target="_blank">Windows PE для флешек</a>
       </div>
     </section>
     <section class="u-clearfix u-grey-80 u-section-2" id="sec-f0ab">
