--- a/Ключи-от-Аддерли.html
+++ b/Ключи-от-Аддерли.html
@@ -142,7 +142,7 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Ключи Windows от Аддерли</h1>
         <h3 class="u-text u-text-2">Все ключи были проверены в начале 2022 года, и от старых версий они нужны для начала установки. В сборках от Аддерли ключи указывать не нужно, потому что в папке есть KMS.</h3>
-        <h3 class="u-text u-text-3">Так же если вы скачали старые Windows с интернета, то ключи могут не подойти, так как может быть другой Сервис Пак, OSR, и т.д.<br>Если вы скачайте с сайта Сборки от Аддерли, ключи по любому подойдут.
+        <h3 class="u-text u-text-3">Так же если вы скачали старые Windows с интернета, то ключи могут не подойти, так как может быть другой Сервис Пак, OSR, и т.д.<br>Если вы скачаете с сайта Сборки от Аддерли, ключи по любому подойдут.
         </h3>
         <a href="Старые-версии-Windows.html" data-page-id="576721080" class="u-border-none u-btn u-btn-round u-button-style u-gradient u-none u-radius-50 u-btn-1">Скачать старые Windows</a>
         <h3 class="u-text u-text-default u-text-4"> Windows 95<br>31797-OEM-0026875-46112<br>
@@ -150,7 +150,7 @@
           <br>Windows 98 Second Edition<br>RW9MG-QR4G3-2WRR9-TG7BH-33GXB<br>
           <br>Windows 2000 SP3<br>DDTPV-TXMX7-BBGJ9-WGY8K-B9GHM<br>
           <br>Windows 2000 SP4<br>JPH7V-XX964-74GDT-Y6P4Q-TJTFQ &nbsp;<br>
-          <br>Windows Millenium Edition<br>KBXCT-RKTJX-2XFWB-D6YW6-MPY7M<br>
+          <br>Windows Millenium Edition<br>KBXCT-RKTJX-2XFWB-D6YW6-MPY7M<br>FMMMC-G8GQH-BH9MT-YBRH3-CRD6T<br>
           <br>Windows XP Professional SP3<br>VHHWK-69Y6M-WM8YD-MB8TR-K86FB<br>
           <br>Windows XP Starter SP2<br>FXVXF-WRQGK-6D877-4XYRM-QPK7T<br>
           <br>Windows XP Home Edition SP3<br>M4YRW-BMBQP-HH2CP-TG37G-Y76RM <br>
@@ -159,7 +159,7 @@
           <br>Windows 7 Ultimate<br>2Y4WT-DHTBF-Q6MMK-KYK6X-VKM6G<br>
           <br>Windows 8.0 Pro<br>XKY4K-2NRWR-8F6P2-448RF-CRYQH<br>
           <br>Windows 8.1 Pro<br>GCRJD-8NW9H-F2CDX-CCM8D-9D6T9<br>VKTXG-GXXY3-W97QP-GP4PV-PWD3K<br>
-          <br>Windows 10 Pro<br>VK7JG-NPHTM-C97JM-9MPGT-3V66T &nbsp;<br>
+          <br>Windows 10/11 Pro<br>VK7JG-NPHTM-C97JM-9MPGT-3V66T &nbsp;<br>
         </h3>
       </div>
     </section>
